# dioxus-genai-chat

./: AGENTS.md  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
dioxus-genai-chat/: Cargo.toml  README.md
dioxus-genai-chat/src/: lib.rs
